Name:           mero-halon
Version:        0.2
Stability:      experimental
Synopsis:       Mero interface to HA
Description:    The High Availability system is a library that can be used
                together with deployment-specific components to ensure the
                high availability of a distributed application.
Homepage:       https://github.com/tweag/halon
License:        Apache-2.0
Copyright:      (C) 2013-2018 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10
extra-doc-files:
    doc/diagrams/Makefile
  , doc/diagrams/sdev-state-transitions.dot
  , doc/diagrams/sns-operation-abort.uml
  , doc/diagrams/sns-operation-failure.uml
  , doc/diagrams/sns-operation-success.uml
  , doc/diagrams/sns-repair.uml
  , doc/diagrams/sns-rebalance.uml

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       mero-halon/

Flag debug
  Description: Enable tracing output so errors are logged.
  Default: False

Flag distributed-tests
  Description: Enables distributed tests.
  Default: False

Flag distributed-benchmarks
  Description: Enables distributed benchmarks.
  Default: False

Flag rpc
  Description: Build with the RPC backend instead of TCP.
  Default: False

Flag eventqueue-tests
  Description: Enables distributed tests.
  Default: False

Flag long-tests
  Description: Enable very long tests
  Default: False

Library
  Hs-Source-Dirs:  src/lib
  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      NamedFieldPuns
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections

  Ghc-Options:  -Wall -Werror
                -optc-Wno-attributes -optc-Werror -optc-g -optc-DM0_INTERNAL=
                -optc-DM0_EXTERN=extern -optc-Wall
  Exposed-Modules: Mero.Messages
                   Mero.RemoteTables
                   HA.Migrations
                   HA.Services.DecisionLog
                   HA.Services.Ekg.RC
                   HA.Services.SSPL
                   HA.Services.SSPL.Rabbit
                   HA.Services.SSPL.LL.CEP
                   HA.Services.SSPLHL
                   HA.Services.SSPL.LL.Resources
                   HA.Services.SSPL.IEM
                   HA.Services.Mero
                   HA.Services.Mero.Types
                   HA.Services.Mero.RC
                   HA.Services.Mero.RC.Actions
                   HA.Services.Mero.RC.Events
                   HA.Stats
                   HA.RecoveryCoordinator.CEP
                   HA.RecoveryCoordinator.Definitions
                   HA.RecoveryCoordinator.Hardware.StorageDevice.Actions
                   HA.RecoveryCoordinator.Actions.Hardware
                   HA.RecoveryCoordinator.Actions.Mero
                   HA.RecoveryCoordinator.Actions.Test
                   HA.RecoveryCoordinator.Castor.Commands
                   HA.RecoveryCoordinator.Castor.Commands.Events
                   HA.RecoveryCoordinator.Castor.Cluster.Actions
                   HA.RecoveryCoordinator.Castor.Cluster.Events
                   HA.RecoveryCoordinator.Castor.Drive
                   HA.RecoveryCoordinator.Castor.Drive.Actions
                   HA.RecoveryCoordinator.Castor.Drive.Events
                   HA.RecoveryCoordinator.Castor.Drive.Rules.Smart
                   HA.RecoveryCoordinator.Castor.Drive.Rules.Internal
                   HA.RecoveryCoordinator.Castor.FilesystemStats
                   HA.RecoveryCoordinator.Castor.Node.Actions
                   HA.RecoveryCoordinator.Castor.Node.Events
                   HA.RecoveryCoordinator.Castor.Pool.Actions
                   HA.RecoveryCoordinator.Castor.Process.Actions
                   HA.RecoveryCoordinator.Castor.Process.Events
                   HA.RecoveryCoordinator.Castor.Process.Rules.Keepalive
                   HA.RecoveryCoordinator.Castor.Rules
                   HA.RecoveryCoordinator.Castor.Service
                   HA.RecoveryCoordinator.Job.Actions
                   HA.RecoveryCoordinator.Job.Events
                   HA.RecoveryCoordinator.Service.Actions
                   HA.RecoveryCoordinator.Service.Rules
                   HA.RecoveryCoordinator.Service.Events
                   HA.RecoveryCoordinator.Log
                   HA.RecoveryCoordinator.Mero
                   HA.RecoveryCoordinator.Mero.Actions.Core
                   HA.RecoveryCoordinator.Mero.Actions.Conf
                   HA.RecoveryCoordinator.Mero.Actions.Initial
                   HA.RecoveryCoordinator.Mero.Events
                   HA.RecoveryCoordinator.Mero.Notifications
                   HA.RecoveryCoordinator.Mero.PVerGen
                   HA.RecoveryCoordinator.Mero.Rules
                   HA.RecoveryCoordinator.Mero.State
                   HA.RecoveryCoordinator.Mero.Transitions
                   HA.RecoveryCoordinator.Mero.Transitions.Internal
                   -- RC interface modules.
                   HA.RecoveryCoordinator.RC
                   HA.RecoveryCoordinator.RC.Actions
                   HA.RecoveryCoordinator.RC.Actions.Core
                   HA.RecoveryCoordinator.RC.Actions.Dispatch
                   HA.RecoveryCoordinator.RC.Actions.Info
                   HA.RecoveryCoordinator.RC.Actions.Log
                   HA.RecoveryCoordinator.RC.Actions.Update
                   HA.RecoveryCoordinator.RC.Application
                   HA.RecoveryCoordinator.RC.Events
                   HA.RecoveryCoordinator.RC.Events.Cluster
                   HA.RecoveryCoordinator.RC.Events.Debug
                   HA.RecoveryCoordinator.RC.Events.Info
                   HA.RecoveryCoordinator.RC.Internal.Storage
                   HA.RecoveryCoordinator.RC.Rules
                   HA.RecoveryCoordinator.RC.Rules.Debug
                   HA.RecoveryCoordinator.RC.Rules.Info
                   HA.RecoveryCoordinator.RC.Subscription
                   HA.Resources.RC
                   HA.Resources.Mero
                   HA.Resources.Mero.Note
                   -- Other resources
                   HA.Resources.Castor
                   HA.Resources.Castor.Initial
                   HA.Resources.Castor.Initial.Old
                   HA.Resources.HalonVars
                   HA.Resources.Update
                   Mero.Epoch
                   Mero.M0Worker
                   Mero.Notification
                   Mero.Notification.HAState
                   Version.Read
                   Version

  Other-Modules:   HA.RecoveryCoordinator.RC.Internal
                   HA.RecoveryCoordinator.Mero.Actions.Spiel
                   HA.RecoveryCoordinator.Castor.Drive.Actions.Graph
                   HA.RecoveryCoordinator.Castor.Drive.Internal
                   HA.RecoveryCoordinator.Castor.Drive.Rules
                   HA.RecoveryCoordinator.Castor.Drive.Rules.Failure
                   HA.RecoveryCoordinator.Castor.Drive.Rules.LedControl
                   HA.RecoveryCoordinator.Castor.Drive.Rules.Raid
                   HA.RecoveryCoordinator.Castor.Drive.Rules.Repair
                   HA.RecoveryCoordinator.Castor.Drive.Rules.Repair.Internal
                   HA.RecoveryCoordinator.Castor.Drive.Rules.Reset
                   HA.RecoveryCoordinator.Castor.FilesystemStats.Events
                   HA.RecoveryCoordinator.Castor.FilesystemStats.Rules
                   HA.RecoveryCoordinator.Castor.Service.Rules
                   HA.RecoveryCoordinator.Castor.Cluster.Rules
                   HA.RecoveryCoordinator.Castor.Process.Rules
                   HA.RecoveryCoordinator.Castor.Node.Rules
                   HA.RecoveryCoordinator.Castor.Expander.Rules
                   HA.RecoveryCoordinator.Mero.Rules.Maintenance
                   HA.Services.DecisionLog.Logger
                   HA.Services.DecisionLog.Trace
                   HA.Services.DecisionLog.Types
                   HA.Services.SSPL.HL.CEP
                   HA.Services.SSPL.LL.RC.Actions
                   HA.RecoveryCoordinator.Job.Internal
                   HA.Resources.Mero.Note.TH
                   HA.Services.Mero.RC.Rules
                   HA.Services.Mero.RC.Resources
                   System.Lnet
                   Mero.Engine

  Build-Depends:   base,
                   aeson,
                   amqp,
                   binary,
                   cereal,
                   cep,
                   confc,
                   bimap,
                   bytestring,
                   constraints,
                   containers,
                   directory,
                   distributed-process-scheduler,
                   distributed-process-extras,
                   distributed-static,
                   ede,
                   lens,
                   hashable,
                   halon-instances,
                   hostname,
                   exceptions,
                   filepath,
                   gitrev,
                   halon,
                   inline-c,
                   mtl,
                   multimap,
                   network >= 2.4,
                   network-transport,
                   options-schema,
                   process,
                   psqueues,
                   random,
                   regex-tdfa,
                   rpclite,
                   replicated-log,
                   scientific,
                   shelly,
                   sspl,
                   stm,
                   system-filepath,
                   template-haskell,
                   text,
                   transformers,
                   time,
                   unix,
                   unordered-containers,
                   uuid,
                   yaml,
                   vector,
                   vinyl,
                   wl-pprint,
                   network-transport-tcp >= 0.3

  c-sources:       hastate/hastate.c
  include-dirs:    hastate
                   ../rpclite/rpclite
  pkgconfig-depends: mero >= 0.1.0

Executable halonctl
  Hs-Source-Dirs:     src/halonctl
  Main-Is:            Main.hs
  Other-Modules:      Handler.Debug
                      Handler.Halon
                      Handler.Halon.Info
                      Handler.Halon.Info
                      Handler.Halon.Node
                      Handler.Halon.Node.Add
                      Handler.Halon.Node.Remove
                      Handler.Halon.Service
                      Handler.Halon.Station
                      Handler.Mero
                      Handler.Mero.Bootstrap
                      Handler.Mero.Drive
                      Handler.Mero.Dump
                      Handler.Mero.Helpers
                      Handler.Mero.Load
                      Handler.Mero.MkfsDone
                      Handler.Mero.Node
                      Handler.Mero.Node.Remove
                      Handler.Mero.Node.Start
                      Handler.Mero.Node.Stop
                      Handler.Mero.Node.DiReb
                      Handler.Mero.Pool
                      Handler.Mero.Process
                      Handler.Mero.Process.Add
                      Handler.Mero.Process.Configuration
                      Handler.Mero.Process.Remove
                      Handler.Mero.Process.Start
                      Handler.Mero.Process.Stop
                      Handler.Mero.Reset
                      Handler.Mero.Start
                      Handler.Mero.Status
                      Handler.Mero.Stop
                      Handler.Mero.Sync
                      Handler.Mero.Update
                      Handler.Mero.Vars
                      Lookup
                      Options.Applicative.Extras

  Ghc-Options: -threaded -Wall -Werror

  if flag(debug)
    ghc-options:      -eventlog -debug -with-rtsopts=-l-au
  default-language:   Haskell2010
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      DisambiguateRecordFields
                      OverloadedStrings
                      ScopedTypeVariables
                      TupleSections
                      StandaloneDeriving
  Build-Depends:      halon,
                      confc,
                      mero-halon,
                      aeson-pretty,
                      base >= 4.5,
                      binary,
                      bytestring,
                      cep,
                      containers,
                      distributed-process-scheduler,
                      distributed-static,
                      exceptions,
                      filepath >= 1.3,
                      hashable,
                      halon-instances,
                      network-transport >= 0.3,
                      options-schema >= 0.2,
                      optparse-applicative >= 0.11,
                      validation >= 1 && < 1.1,
                      process,
                      split,
                      yaml,
                      lens,
                      text,
                      mtl,
                      directory,
                      unordered-containers,
                      uuid,
                      network >= 2.4,
                      network-transport-tcp >= 0.3,
                      rpclite,
                      hslogger

Executable haloninfo
  Hs-Source-Dirs:     src/haloninfo
  Main-Is:            Main.hs
  default-language:   Haskell2010
  Ghc-Options: -Wall -Werror

  if flag(rpc)
      CPP-Options:    -DUSE_RPC
  Build-Depends:      mero-halon,
                      base >= 4.5,
                      optparse-applicative >= 0.11

Executable halond
  Hs-Source-Dirs:     src/halond
  Main-Is:            Main.hs
  Other-Modules:      Flags

  -- Reduce the context-switch interval to improve sharing
  -- of the CPU when there are CPU-intensive computations
  -- in the RC.
  Ghc-Options: -threaded -Wall "-with-rtsopts=-C0 -T" -rtsopts -g -Werror

  if flag(debug)
    ghc-options:      -debug "-with-rtsopts=-C0 -l-au -T"
  default-language:   Haskell2010
  Default-Extensions: DeriveDataTypeable
                      DisambiguateRecordFields
                      OverloadedStrings
                      ScopedTypeVariables
                      TupleSections
                      StandaloneDeriving
  Build-Depends:      halon,
                      binary,
                      directory,
                      mero-halon,
                      base >= 4.5,
                      distributed-commands,
                      distributed-process-scheduler,
                      distributed-static,
                      filepath >= 1.3,
                      network-transport >= 0.3,
                      options-schema,
                      rank1dynamic,
                      rpclite,
                      time,
                      network >= 2.4,
                      network-transport-tcp >= 0.3.1

Test-Suite distributed-tests
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests
  Main-Is:         distributed-tests.hs

  Ghc-Options: -threaded -Wall -Werror

  Other-Modules:
      HA.Test.Distributed.Autoboot
      HA.Test.Distributed.ClusterDeath
      HA.Test.Distributed.ConfigureServices
      HA.Test.Distributed.Helpers
      HA.Test.Distributed.MoveState
      HA.Test.Distributed.NodeDeath
      HA.Test.Distributed.RCInsists
      HA.Test.Distributed.RCInsists2
      HA.Test.Distributed.Snapshot3
      HA.Test.Distributed.StartService
      HA.Test.Distributed.StressRC
      HA.Test.Distributed.TSDisconnects
      HA.Test.Distributed.TSDisconnects2
      HA.Test.Distributed.TSRecovers
      HA.Test.Distributed.TSRecovers2
      HA.Test.Distributed.TSTotalIsolation
      HA.Test.Distributed.TSTotalIsolation2

  Build-Depends:   distributed-process,
                   base,
                   cep,
                   distributed-process-test,
                   filepath,
                   halon,
                   halon-instances,
                   mero-halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process,
                   tasty,
                   tasty-files,
                   tasty-hunit,
                   options-schema,
                   transformers
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite testsnapshot2
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         snapshots2.hs

  Ghc-Options:     -threaded -Wall -Werror
  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process

  if !(flag(distributed-tests) && flag(long-tests))
    Buildable:     False


Test-Suite testepoch
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests
  Main-Is:         testepoch.hs

  Ghc-Options: -threaded -Wall -Werror
  buildable: False

Test-Suite testeventqueue
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         EventQueue.hs

  Ghc-Options: -threaded -Wall -Werror
  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process,
                   transformers,
                   halon,
                   bytestring,
                   network,
                   mtl
  if !flag(eventqueue-tests)
    Buildable:     False

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    HA.RecoveryCoordinator.Helpers
                    HA.RecoveryCoordinator.SSPL.Tests
                    HA.RecoveryCoordinator.Tests
                    HA.Services.Mero.Mock
                    HA.Autoboot.Tests
                    HA.Castor.Tests
                    HA.Castor.Story.Tests
                    HA.Castor.Story.Process
                    HA.Test.Cluster
                    HA.Test.Disconnect
                    HA.Test.InternalStateChanges
                    HA.Test.NotificationSort
                    HA.Test.ServiceInterface
                    HA.Test.SSPL
                    Helper.SSPL
                    Helper.Runner
                    RemoteTables
                    TestRunner
                    HA.Castor.Story.Tests
                    Helper.SSPL
                    Helper.Environment
                    Helper.InitialData
                    Helper.RC

  Main-Is:          tests.hs

  Ghc-Options: -threaded -Wall -rtsopts -with-rtsopts=-T -Werror

  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      NamedFieldPuns
                      RecordWildCards
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    confc,
                    rpclite,
                    syb,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    directory,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    halon-instances,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    cep,
                    attoparsec,
                    containers,
                    directory,
                    filepath,
                    process,
                    amqp,
                    text,
                    unix,
                    uuid,
                    time,
                    text,
                    unix,
                    process,
                    uuid,
                    exceptions,
                    lens,
                    split,
                    aeson,
                    vinyl
  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3

Test-Suite scheduler-tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    HA.Autoboot.Tests
                    HA.Castor.Tests
                    HA.Test.Disconnect
                    Helper.SSPL
                    Helper.Runner
                    Helper.Environment
                    Helper.InitialData
                    Helper.RC
                    RemoteTables
                    TestRunner
                    HA.RecoveryCoordinator.Helpers
                    HA.RecoveryCoordinator.Tests
                    HA.Services.Mero.Mock
  Main-Is:          scheduler-tests.hs

  Ghc-Options: -threaded -Wall -Werror -eventlog

  CPP-Options:      -DMC_RG=RLogGroup
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    confc,
                    rpclite,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    directory,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    filepath,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    halon-instances,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    unix,
                    cep,
                    attoparsec,
                    containers,
                    time,
                    text,
                    process,
                    uuid,
                    exceptions,
                    stm,
                    split,
                    lens,
                    vinyl

benchmark halonpings
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  benchmarks
  Main-Is:         halonpings.hs

  Ghc-Options: -threaded -Wall -Werror
  if flag(distributed-benchmarks)
    Build-Depends: distributed-process,
                   base,
                   clock,
                   filepath,
                   halon,
                   mero-halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands
  else
    Buildable:     False

Benchmark initial-data-gc
  Type:             exitcode-stdio-1.0
  Main-Is:          initial-data-gc.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   benchmarks, tests
  Other-Modules:    HA.Castor.Tests,
                    Helper.Environment,
                    Helper.InitialData,
                    Helper.RC,
                    RemoteTables,
                    TestRunner

  Ghc-Options: -threaded -Wall -Werror

  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    base >= 4.5,
                    Cabal >= 1.16,
                    binary >= 0.6.4,
                    bytestring,
                    cep,
                    confc,
                    containers,
                    criterion,
                    deepseq,
                    directory,
                    distributed-process-scheduler,
                    distributed-process-test,
                    filepath,
                    hashable,
                    network,
                    network-transport,
                    network-transport-inmemory,
                    options-schema >= 0.1.1.0,
                    process,
                    random,
                    rpclite,
                    tasty-hunit,
                    unix,
                    unordered-containers
