Name:          network-transport-rpc
Version:       0.0.1
Synopsis:      Implementation of a transport backend for RPC
Description:   The RPC backend provides an interface to Mero RPC library.
Copyright:     (C) 2012 Seagate Technology LLC and/or its Affiliates
Category:      Network
Build-Type:    Custom
Cabal-Version: >= 1.8

Flag debug
  Description: Print messages when the RPC backend calls are evaluated
  Default: False

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

Library
  exposed-modules:     Network.Transport.RPC
  other-modules:

  build-depends:       base >= 4.3
                     , binary >= 0.6
                     , bytestring
                     , containers >= 0.5
                     , filepath >= 1.3
                     , network-transport >= 0.3
                     , rpclite

  ghc-options:  -Wall -fprof-auto -fprof-auto-calls

  if flag(maintainer)
    ghc-options: -Werror

  if flag(debug)
    cpp-options:      -DDEBUG

  cc-options: -Wno-attributes -Werror -g -DM0_INTERNAL= -DM0_EXTERN=extern
  extra-libraries: mero

Test-Suite tutorial-client
  Type:           exitcode-stdio-1.0
  main-is:        tutorial-client.hs
  hs-source-dirs: tests

  ghc-options:     -Wall -idist/build -threaded

  if flag(maintainer)
    ghc-options:  -Werror

  build-depends:  base >= 4.3
                , binary
                , bytestring
                , network-transport-rpc
                , network-transport
  buildable: False

Test-Suite tutorial-server
  Type:           exitcode-stdio-1.0
  main-is:        tutorial-server.hs
  hs-source-dirs: tests


  ghc-options:     -Wall -idist/build -threaded

  if flag(maintainer)
    ghc-options:  -Werror

  build-depends:  base >= 4.3
                , binary
                , bytestring
                , network-transport-rpc
                , network-transport
                , containers
  buildable: False

Test-Suite ch-client
  Type:           exitcode-stdio-1.0
  main-is:        ch-client.hs
  hs-source-dirs: tests

  ghc-options:     -Wall -idist/build -threaded

  if flag(maintainer)
    ghc-options: -Werror

  build-depends:  base >= 4.3
                , binary
                , bytestring
                , network-transport-rpc
                , network-transport
                , distributed-process
                , containers
                , mtl
  buildable: False

Test-Suite ch-server
  Type:           exitcode-stdio-1.0
  main-is:        ch-server.hs
  hs-source-dirs: tests

  ghc-options:     -Wall -idist/build -threaded

  if flag(maintainer)
    ghc-options:  -Werror

  build-depends:  base >= 4.3
                , binary
                , bytestring
                , network-transport-rpc
                , containers
                , distributed-process
                , network-transport
                , containers
                , mtl
  buildable: False

Test-Suite ch-delay-client
  Type:           exitcode-stdio-1.0
  main-is:        ch-delay-client.hs
  hs-source-dirs: tests

  ghc-options:     -Wall -idist/build -threaded

  if flag(maintainer)
    ghc-options:  -Werror

  build-depends:  base >= 4.3
                , bytestring
                , network-transport-rpc
                , network-transport
                , distributed-process
                , containers
                , mtl
                , data-accessor
                , random
  buildable: False

Test-Suite ch-delay-server
  Type:           exitcode-stdio-1.0
  main-is:        ch-delay-server.hs
  hs-source-dirs: tests

  ghc-options:     -Wall -idist/build -threaded

  if flag(maintainer)
    ghc-options:  -Werror

  build-depends:  base >= 4.3
                , bytestring
                , network-transport-rpc
                , containers
                , distributed-process
                , network-transport
                , containers
                , mtl
  buildable: False

Test-Suite testtransport
  Type:           exitcode-stdio-1.0
  main-is:        testtransport.hs
  hs-source-dirs: tests, network-transport-tests/src

  ghc-options:     -Wall -idist/build -threaded

  if flag(maintainer)
    ghc-options:  -Werror

  extensions:   CPP
              , DeriveDataTypeable
              , ExistentialQuantification
              , FlexibleInstances
              , RankNTypes
  build-depends:  base >= 4.3
                , binary >= 0.6
                , bytestring
                , containers
                , network-transport-rpc
                , network-transport
                , random
                , rpclite
                , ansi-terminal

Test-Suite TestCH
  Type:           exitcode-stdio-1.0
  main-is:        TestCH.hs
  hs-source-dirs: tests


  ghc-options:  -Wall -idist/build -threaded -fno-prof-count-entries -fprof-auto-calls -fprof-auto -fno-warn-unused-do-bind

  if flag(maintainer)
    ghc-options: -Werror

  build-depends:  base >= 4.3
                , bytestring
                , network-transport-rpc
                , network-transport
                , containers
                , distributed-process
                , random
                , ansi-terminal
                , mtl
                , rpclite
                , time
                , binary

Test-Suite TestNT
  Type:           exitcode-stdio-1.0
  main-is:        TestNT.hs
  hs-source-dirs: tests network-transport-tests/src

  ghc-options:  -Wall -idist/build -threaded -fno-prof-count-entries -fprof-auto-calls -fprof-auto -fno-warn-unused-do-bind

  if flag(maintainer)
    ghc-options: -Werror

  extensions:          CPP,
                       ExistentialQuantification,
                       FlexibleInstances,
                       DeriveDataTypeable,
                       RankNTypes,
                       OverloadedStrings,
                       OverlappingInstances
  build-depends:  base >= 4.3,
--                   network-transport-tests
                  network-transport >= 0.3,
                  network-transport-rpc,
                  containers >= 0.4,
                  bytestring >= 0.9,
                  random >= 1.0,
                  rpclite,
                  mtl >= 2.1,
                  ansi-terminal >= 0.5
