name:                ras
version:             0.1.0.0
synopsis:            RAS Bindings for Halon.
license:             AllRightsReserved
copyright:           (c) 2014 Seagate Technology LLC
build-type:          Simple
cabal-version:       >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

library
  exposed-modules:     RAS.Bindings
                       RAS.Bindings.DisableRequest
                       RAS.Bindings.FailureNotification
                       RAS.Bindings.FailureSetQuery
                       RAS.Bindings.FailureSetQueryResponse
                       RAS.Bindings.MessageAck
                       RAS.Bindings.Ping
                       RAS.Bindings.ProcessingError
  other-modules:       RAS.Bindings.Instances
  hs-source-dirs:      src
  build-depends:       base >=4.7,
                       aeson,
                       aeson-schema >= 0.4,
                       binary,
                       containers,
                       ghc-prim,
                       hashable,
                       regex-base,
                       regex-compat,
                       regex-pcre,
                       scientific >= 0.3.4.0,
                       text,
                       text-binary,
                       unordered-containers,
                       vector,
                       vector-binary-instances,
                       yaml
  if flag(maintainer)
    ghc-options: -Werror
  default-language:    Haskell2010

-- Generates RAS.Bindings.* modules.
executable ras-mkBindings
  main-is:             mkBindings.hs
  other-modules:       RAS.Schemata.DisableRequest
                       RAS.Schemata.FailureNotification
                       RAS.Schemata.FailureSetQuery
                       RAS.Schemata.FailureSetQueryResponse
                       RAS.Schemata.MessageAck
                       RAS.Schemata.Ping
                       RAS.Schemata.ProcessingError
  hs-source-dirs:      app
  build-depends:       base >=4.7,
                       aeson-schema,
                       containers,
                       template-haskell,
                       text,
                       binary,
                       hashable
  default-language:    Haskell2010
  if flag(maintainer)
    ghc-options: -Werror
